fix: Image links for book covers in CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5{
     background-size: cover;
 }
 .image-4{
-    background: url(../images/book-covers/book4-cover.png) no-repeat center center;
+    background: url(../images/book-covers/book4-cover.jpg) no-repeat center center;
     background-size: cover;
 }
 .image-5{
@@ -95,7 +95,7 @@ h1, h2, h3, h4, h5{
     background-size: cover;
 }
 .image-6{
-    background: url(../images/book-covers/book6-cover.png) no-repeat center center;
+    background: url(../images/book-covers/book6-cover.jpg) no-repeat center center;
     background-size: cover;
 }
 .image-7{
